public/css/main.css
/* ... */
.video_provider .ui-selectmenu-button span.ui-selectmenu-text {
	padding: 0.2em 0.5em;
}

.video_provider input.big_rec_btn {
		height: 75px;
		width: 75px;
		display: block;
		background-color: #6E0001;
		color: #DFDCDC;
		border-radius: 50px;
		border: 1px solid #888;
		margin: auto;
	}
.video_provider input.big_rec_btn:focus {
	outline: none;
	animation: recordglow 2s infinite;
}
@keyframes recordglow {
	0% {box-shadow: 0px 0px 10px 0px red;}
	50% {box-shadow: 0px 0px 30px 2px red;}
	100% {box-shadow: 0px 0px 10px 0px red;}
}

.video_provider .select_vid_type{
	width: 300px;
	display: block;
	margin: auto;
	position: relative;
}
.video_provider .small_text {
	font-size: 0.6em;
}
.video_provider .hosted_video .hosted_fields {
	margin: 4em 0 0;
}
.video_provider .hosted_video .hosted_fields p {
	font-size: 0.75em;
  line-height: 1.5em;
}
.video_provider .hosted_video .hosted_fields img {
	height: 0.8em;
	margin: 0 0.3em -0.1em 0.3em;
}
.video_provider .hosted_video .hosted_fields span {
	color: #8698fb;
}

.video_provider .video_type_selection {
	width: 300px;
	display: inline-block;
	height: 40px;
	position: relative;
	top: 5px;
	background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='11' height='30'><circle cx='7' cy='15' r='4' fill='#555'/></svg>")  repeat-x;
	/*    Fill color should be programically altered according to the needs of linkage -- nice red: #6E0001           */
}

.video_type_selection.custom_select {


}

.video_provider .tiny_thumb {
	height: 40px;
	width: 40px;
	background-color: #3d4469;
	display: inline-block;
	position: absolute;
	top: 0;
	border-radius: 40px;
	border: 2px solid #777;
}
.video_provider .tiny_thumb.source {
	left: 0;
}
.video_provider .tiny_thumb.comment {
	right: 0;
	border: 2px dashed #777;
}

.video_provider button[type=submit]:disabled {
	background-color: #333;
  border: 1px solid #666;
  color: #999;
}

.video_provider button[type=submit] {
	border: 1px solid #888;
	border-radius: 0;
	padding: 0.5em 2em;
	color: #fff;
	font-size: 0.9em;
	margin: 2em auto 5em;
  display: block;
	background-color: #3d4469;
	cursor: pointer;
}
.video_provider button[type=submit]:active,  .video_provider button[type=submit]:focus{
	background-color: #202540;
}

/* ------------------ Afer submitting Video  -------------------*/

.recording_status {
	position: absolute;
	width: 100%;
	text-align: center;
	left: 0;
}

.submit_progress {
	display: block;
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: black;
	opacity: 0.6;
	top: 0;
}
.progress_info{
	display: block;
	position: absolute;
	width: 100%;
	padding: 3em 0;
	top: 30vh;
	margin: auto;
	background-color: black;
	text-align: center;
}

/* ------------------ Video Provider (Add video, upload or Link) for Playmedia  -------------------*/

.video_provider.playmedia {
	position: absolute;
	top: 0;
}

/* ------------------ Video List -------------------*/

.video_list {
  display: grid;
	grid-template-columns: auto;
}
.video_list_background {
	text-align: center;
	margin-top: 50%;
	position: fixed;
	width: 100%;
}
.video_list_background h1 {
	font-size: 1em;
}
.video_list_background p {
	float: inherit;
	font-size: 0.6em;
	font-weight: 100;
}
.logged_in .video_list_background {
	display: none;
}

.video_item {
	background-image: linear-gradient(#eee, #fff);
	font-size:0.8em;
	color: #777;
	border-bottom: #bbb solid 1px;
	position: relative;
	max-height: 100px;
}

.description_link_box {
	width: 100%;
  height: 100%;
  display: block;
  z-index: 1;
  position: absolute;
}

.video_image {
	float: left;
	display:inline-block;
	width:100px;
	height:100px;
	background-color: #555;
	background-image: url("../graphics/video_default_thumb.png");
	background-size: cover;
	background-position: center;
	overflow: hidden;
}
.video_image video {
	height: 100%;
	transform: translateX(-25%);
}
.video_image img {
	height: 100%;
	transform: translateX(-25%);
}

.video_description {
	float: left;
	display:inline-block;
	width:calc(100% - 100px);
	min-height: calc(100px - 4em);
	height: calc(100px - 4em);
	position: relative;
	padding-bottom: 2em;
	padding-top: 2em;
}
.video_description h4 {
	margin-left: 1em;
	margin-top: 0.2em;
	margin-bottom: 0.3em;
	margin-right: 0.1em;
	white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
.video_description a{
	text-decoration: none;
	color: #555;
}

.video_description .video_details_wrapper {

}

.video_description .feedback__likes {
	margin-left: 1em;
	position: absolute;
	top: 0.8em;;
	left: 0.2em;
	font-size: 0.7em;
}

.video_description .creation__date {
	font-size: 0.7em;
	position: absolute;
	top: 0.8em;;
	right: 0.4em;
	font-size: 0.7em;
}
.video_description .rdfs__label {

}
.video_description .schema__description {
	margin-left: 1.1em;
	font-size: 0.9em;
	overflow: hidden;
	max-height: 35px;
	text-overflow: ellipsis;
}

.video_description .uploader__profile {
	display: inline-block;
	line-height: 1.9;
	font-size: 0.9em;
	position: absolute;
  bottom: 0;
	right: 2.5em;
}
.video_description .uploader_icon {
	display: inline-block;
	height: 1.2em;
	width: 1.2em;
	line-height: 1.2em;
	background-color: #666;
	text-align: center;
	color: #fff;
	margin: 3px;
	position: absolute;
  bottom: 0;
  right: 0.2em;
	border-radius: 1.2em;
}
fieldset.time_range_set {
	width: 90%;
}
.record_time_in label, .record_time_in input, .record_time_in button {
	display: inline-block;
}
.record_time_out label, .record_time_out input, .record_time_out button {
	display: inline-block;
}
.record_time_in, .record_time_out {
	width: 40%;
	margin-left: 5%;
	display: inline-block;
}
.record_time_in input, .record_time_out input {
	width: 4em;
	margin: 0 0.5em;
	text-align: center;
}
.time_range_set legend {
	text-align: center;
}
.record_time_out label, .record_time_in label {
	color: #888;
	font-size: 0.8em;
}
/* ... */

